--- a/DocAnalyzer/DocAnalyzer.csproj
+++ b/DocAnalyzer/DocAnalyzer.csproj
@@ -8,6 +8,10 @@
     <PackageId>*$(MSBuildProjectFile)*</PackageId>
   </PropertyGroup>
 
+  <PropertyGroup>
+	<LangVersion>10.0</LangVersion>
+  </PropertyGroup>
+	
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.8" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.3.1" />
